--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.1",
     "@uiw/codemirror-theme-okaidia": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
     "next": "14.0.3",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "eslint": "8.55.0",
