--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.1",
+    "@lezer/highlight": "^1.2.0",
     "@uiw/codemirror-theme-abcdef": "^4.21.21",
     "@uiw/codemirror-theme-darcula": "^4.21.21",
     "@uiw/codemirror-theme-eclipse": "^4.21.21",
     "@uiw/codemirror-theme-github": "^4.21.21",
     "@uiw/codemirror-theme-okaidia": "^4.21.21",
     "@uiw/codemirror-theme-solarized": "^4.21.21",
+    "@uiw/codemirror-themes": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
     "next": "14.0.3",
     "next-pwa": "^5.6.0",
